new translate added

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -38,8 +38,8 @@
     "modal_contact": "Контакты",
     "from": "От",
     "to": "До",
-    "type_operation":"Тип операции",
-    "type_object":"Тип объекта"
+    "type_operation": "Тип операции",
+    "type_object": "Тип объекта"
   },
   "banners": {
     "home_banner": "Топ 100 квартир под ваши желания из нашей эксклюзивной базы",
@@ -55,7 +55,7 @@
   },
   "contents": {
     "title_home": "Самые актуальные варианты недвижимости",
-    "title_mortgage": "Ипотека в Ташкенте",
+    "title_mortgage": "Toshkentda ipoteka",
     "title_career": "Условия:",
     "title_calculator": "Ипотечный калькулятор",
     "descr_apartamentId": "Описание",
@@ -170,12 +170,13 @@
   },
   "order": "Оставить заявку",
   "company": {
-    "title": "Витрина Недвижимости — ваш надежный партнер на рынке недвижимости Ташкента.",
+    "name": "\"Витрина Недвижимости\"",
+    "title": " — ваш надежный партнер на рынке недвижимости Ташкента.",
     "text1": "Мы не просто размещаем тысячи объектов, ведь это может сделать каждый. Наши профессионалы с более чем 10-летним опытом проводят полную юридическую проверку, анализ ликвидности и тщательную верификацию документов, чтобы вы могли быть уверены в безопасности своих средств.",
     "text2": "В нашу эксклюзивную подборку \"ТОП-100 лучших квартир Ташкента\" входят только самые проверенные и ликвидные объекты.",
     "text3": "С нами одобрение ипотеки на 35% выше. Наш колоссальный опыт и сеть из свыше 8000 агентов в странах СНГ помогают нам быть крупнейшим агентством на международном уровне.",
     "text4": "Удобная платформа позволит вам подобрать квартиру в 1 клик, под ваш бюджет и потребности, с бонусной консультацией от специалиста и юридическим сопровождением сделки.",
     "text5": "Перестаньте тратить время на бесконечный поиск и рисковать своими средствами на сомнительных площадках. Доверьтесь профессионалам, которые являются членами Гильдии риелторов и входят в Ассоциацию риелторов Узбекистана. Мы также сертифицированы Агентством по Управлению Государственными Активами.",
-    "title2": "\"Витрина Недвижимости\" — качество, проверенное экспертами, доступное вам уже сегодня."
+    "title2": " — качество, проверенное экспертами, доступное вам уже сегодня."
   }
 }
