--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -178,5 +178,9 @@
     "text4": "Удобная платформа позволит вам подобрать квартиру в 1 клик, под ваш бюджет и потребности, с бонусной консультацией от специалиста и юридическим сопровождением сделки.",
     "text5": "Перестаньте тратить время на бесконечный поиск и рисковать своими средствами на сомнительных площадках. Доверьтесь профессионалам, которые являются членами Гильдии риелторов и входят в Ассоциацию риелторов Узбекистана. Мы также сертифицированы Агентством по Управлению Государственными Активами.",
     "title2": " — качество, проверенное экспертами, доступное вам уже сегодня."
+  },
+  "card":{
+    "floor":"Этаж",
+    "rooms":"Комн"
   }
 }
