--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -121,8 +121,10 @@
       "rooms_qty": "Количество комнат:",
       "total_area": "Общая площадь:",
       "floor": "Этаж:",
+      "house_quadrature": "Площадь участка:",
       "creation_year": "Год постройки:",
-      "condition": "Состояние:"
+      "condition": "Состояние:",
+      "apartCreatedDate": "Дата создания обьявления:"
     }
   },
   "tabs": {
@@ -139,7 +141,7 @@
     "repair": "Ремонт",
     "district": "Район",
     "studio": "Студия",
-    "house_quadrature": "Площадь участка, сот"
+    "house_quadrature": "Площадь участка"
   },
   "title": {
     "home": "Главная",
@@ -179,8 +181,8 @@
     "text5": "Перестаньте тратить время на бесконечный поиск и рисковать своими средствами на сомнительных площадках. Доверьтесь профессионалам, которые являются членами Гильдии риелторов и входят в Ассоциацию риелторов Узбекистана. Мы также сертифицированы Агентством по Управлению Государственными Активами.",
     "title2": " — качество, проверенное экспертами, доступное вам уже сегодня."
   },
-  "card":{
-    "floor":"Этаж",
-    "rooms":"Комн"
+  "card": {
+    "floor": "Этаж",
+    "rooms": "Комн"
   }
 }
