--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -124,7 +124,8 @@
       "house_quadrature": "Yer maydoni:",
       "creation_year": "Qurilish yili:",
       "condition": "Xolati:",
-      "apartCreatedDate": "E’lon yaratilgan sana:"
+      "apartCreatedDate": "E’lon yaratilgan sana:",
+      "commision": "Agentlik komissiyasi:"
     }
   },
   "tabs": {
