--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -55,7 +55,7 @@
   },
   "contents": {
     "title_home": "Самые актуальные варианты недвижимости",
-    "title_mortgage": "Toshkentda ipoteka",
+    "title_mortgage": "Ипотека в Ташкенте",
     "title_career": "Условия:",
     "title_calculator": "Ипотечный калькулятор",
     "descr_apartamentId": "Описание",
