--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -136,7 +136,7 @@
     "houses": "Дома",
     "commercial": "Коммерческая",
     "rooms": "Кол-во комнат",
-    "price": "Стоимость, у.е",
+    "price": "Стоимость",
     "quadrature": "Квадратура, кв-м",
     "floor": "Этаж",
     "repair": "Ремонт",
