--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -136,7 +136,7 @@
     "houses": "Hovli Uylar",
     "commercial": "Noturar",
     "rooms": "Xonalar soni",
-    "price": "Narxi, у.е",
+    "price": "Narxi",
     "quadrature": "Maydon, kv-m",
     "floor": "Qavat",
     "repair": "Remont",
